[project]
name = "webcrawler-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.13.5",
    "apscheduler>=3.11.2",
    "beautifulsoup4==4.13.4",
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "matplotlib>=3.10.9",
    "networkx>=3.6.1",
    "requests==2.32.4",
]
